<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_15sdp"
            android:text="@string/settings"
            android:textColor="@color/cam"

            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@color/cam" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            app:civ_border_width="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:civ_border_color="@color/cam"
            android:src="@drawable/avatar"
            />

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/cam"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_168sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/spartan_regular_400"
            android:text="@string/trust_your_feelings_be_a_good_human_beings"
            android:textAlignment="textStart"
            android:textColor="@color/cam"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />


    </FrameLayout>
    <FrameLayout
        android:paddingHorizontal="@dimen/_10sdp"
        android:id="@+id/modeTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_brightness_2_24"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/spartan_regular_400"
            android:padding="@dimen/_11sdp"
            android:text="@string/dark_mode"
            android:textColor="@color/cam"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:thumbTint="@color/colorTextSecondary"
            app:trackTint="#F1EAEA" />

    </FrameLayout>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_login_24"
            app:tint="@color/blue"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/spartan_regular_400"
            android:padding="@dimen/_11sdp"
            android:text="@string/log_out"
            android:textColor="@color/cam"
            android:textSize="@dimen/_14sdp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:tint="@color/colorTextSecondary" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/spartan_regular_400"
            android:padding="@dimen/_11sdp"
            android:text="@string/account"
            android:textColor="@color/cam"
            android:textSize="@dimen/_14sdp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:tint="@color/colorTextSecondary" />

    </FrameLayout>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_settings_24"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/spartan_regular_400"
            android:padding="@dimen/_11sdp"
            android:text="@string/chat_settings"
            android:textColor="@color/cam"
            android:textSize="@dimen/_14sdp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:tint="@color/colorTextSecondary" />

    </FrameLayout>

</LinearLayout>